--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,1 +1,6 @@
 tatami.user.undefined=Utilisateur inconnu.
+tatami.copyright=Copyright 2012
+tatami.ippon.technologies=Ippon Technologies
+tatami.github.fork=Forker Tatami sur Github
+tatami.ippon.blog=Blog Ippon
+tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
