--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -4,3 +4,10 @@ tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Forker Tatami sur Github
 tatami.ippon.blog=Blog Ippon
 tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
+tatami.title=Tatami
+tatami.profile=Profil
+tatami.home=Accueil
+tatami.about=A Propos
+tatami.logout=Déconnexion
+tatami.login=Connexion
+tatami.404=Page non trouvée
