--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,3 +4,10 @@ tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Fork Tatami on Github
 tatami.ippon.blog=Blog Ippon
 tatami.ippon.twitter.follow=Follow @ippontech on Twitter
+tatami.title=Tatami
+tatami.profile=Profile
+tatami.home=Home
+tatami.about=About
+tatami.logout=Logout
+tatami.login=Login
+tatami.404=Page not found.
