--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -11,3 +11,8 @@ tatami.about=A Propos
 tatami.logout=Déconnexion
 tatami.login=Connexion
 tatami.404=Page non trouvée
+tatami.user.followed=Suivi
+tatami.user.follow=Suivre
+tatami.user.nbTweets=Tweets
+tatami.user.nbFollowedUsers=Abonnements
+tatami.user.nbFollowers=Abonnés
