--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -11,3 +11,8 @@ tatami.about=About
 tatami.logout=Logout
 tatami.login=Login
 tatami.404=Page not found.
+tatami.user.followed=Followed
+tatami.user.follow=Follow
+tatami.user.nbTweets=Tweets
+tatami.user.nbFollowedUsers=Followed
+tatami.user.nbFollowers=Followers
