Traductions ok for Login Page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -10,9 +10,13 @@ tatami.home=Home
 tatami.about=About
 tatami.logout=Logout
 tatami.login=Login
+tatami.password=Password
 tatami.404=Page not found.
 tatami.user.followed=Followed
 tatami.user.follow=Follow
 tatami.user.nbTweets=Tweets
 tatami.user.nbFollowedUsers=Followed
 tatami.user.nbFollowers=Followers
+tatami.authentification=Authentification
+tatami.authentificate=Authentificate
+tatami.remember.password.time=Remember for 30 days
