--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -10,9 +10,13 @@ tatami.home=Accueil
 tatami.about=A Propos
 tatami.logout=Déconnexion
 tatami.login=Connexion
+tatami.password=Mot de Passe
 tatami.404=Page non trouvée
 tatami.user.followed=Suivi
 tatami.user.follow=Suivre
 tatami.user.nbTweets=Tweets
 tatami.user.nbFollowedUsers=Abonnements
 tatami.user.nbFollowers=Abonnés
+tatami.authentification=Authentification
+tatami.authentificate=Se Connecter
+tatami.remember.password.time=Se souvenir 30 jours
