Traductions ok for Home Page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -26,3 +26,12 @@ tatami.license=License
 tatami.presentation=Presentation
 tatami.presentation.text=Tatami is a twitter-like application, for internal use inside a company.
 tatami.presentation.moreinfo=More information on our Github page : 
+tatami.show.profile=Show Profile
+tatami.update.profile=Update Profile
+tatami.tweets=Tweets
+tatami.user.favoritetweets=Favorite Tweets
+tatami.user.otheruser.tweets=Other User Tweets
+tatami.tags=Tags
+tatami.tweets.stats=Statistics
+tatami.stats.tweets.piechart=Tweets of the day (pie chart)
+tatami.stats.tweets.punchchart=Tweets of the week (punch chart)
