--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -25,4 +25,13 @@ tatami.licence=Licensed under the Apache License, Version 2.0 (the "License"); y
 tatami.license=License
 tatami.presentation=Presentation
 tatami.presentation.text=Tatami is a twitter-like application, for internal use inside a company.
-tatami.presentation.moreinfo=More information on our Github page : 
+tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
+tatami.show.profile=Montrer Profile
+tatami.update.profile=Mettre à jour le Profil
+tatami.tweets=Tweets
+tatami.user.favoritetweets=Tweets Favoris
+tatami.user.otheruser.tweets=Tweets des autres Utilisateurs
+tatami.tags=Tags
+tatami.tweets.stats=Statistiques
+tatami.stats.tweets.piechart=Tweets du jour (pie chart)
+tatami.stats.tweets.punchchart=Tweets de la semaine (punch chart)
