--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -35,3 +35,4 @@ tatami.tags=Tags
 tatami.tweets.stats=Statistics
 tatami.stats.tweets.piechart=Tweets of the day (pie chart)
 tatami.stats.tweets.punchchart=Tweets of the week (punch chart)
+tatami.user.yourare=You are !
