--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -35,3 +35,4 @@ tatami.tags=Tags
 tatami.tweets.stats=Statistiques
 tatami.stats.tweets.piechart=Tweets du jour (pie chart)
 tatami.stats.tweets.punchchart=Tweets de la semaine (punch chart)
+tatami.user.yourare=C'est vous !
