Improved the profile view with tweet & suggestions

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -36,3 +36,6 @@ tatami.tweets.stats=Statistics
 tatami.stats.tweets.piechart=Tweets of the day (pie chart)
 tatami.stats.tweets.punchchart=Tweets of the week (punch chart)
 tatami.user.yourare=You are !
+tatami.user.tweettohim=Tweet to him
+tatami.user.suggestions=Suggestions
+tatami.user.tweet=Tweet !
