--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -36,3 +36,6 @@ tatami.tweets.stats=Statistiques
 tatami.stats.tweets.piechart=Tweets du jour (pie chart)
 tatami.stats.tweets.punchchart=Tweets de la semaine (punch chart)
 tatami.user.yourare=C'est vous !
+tatami.user.tweettohim=Tweet lui
+tatami.user.suggestions=Suggestions
+tatami.user.tweet=Tweet !
