--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -19,15 +19,15 @@ tatami.user.nbFollowedUsers=Followed
 tatami.user.nbFollowers=Followers
 tatami.authentification=Authentification
 tatami.authentificate=Authentificate
-tatami.remember.password.time=Remember for 30 days
+tatami.remember.password.time=Automatic connection (30 days)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.licence=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=License
 tatami.presentation=Presentation
 tatami.presentation.text=Tatami is a twitter-like application, for internal use inside a company.
 tatami.presentation.moreinfo=More information on our Github page : 
-tatami.show.profile=Show Profile
-tatami.update.profile=Update Profile
+tatami.show.profile=Profile
+tatami.update.profile=Update your Profile
 tatami.tweets=Tweets
 tatami.user.favoritetweets=Favorite Tweets
 tatami.user.otheruser.tweets=Other User Tweets
