Refactored UI pages, and corrected lots of small bugs

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,3 @@
-tatami.user.undefined=User undefined.
 tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Fork Tatami on Github
@@ -12,11 +11,7 @@ tatami.logout=Logout
 tatami.login=Login
 tatami.password=Password
 tatami.404=Page not found.
-tatami.user.followed=Followed
-tatami.user.follow=Follow
-tatami.user.nbTweets=Tweets
-tatami.user.nbFollowedUsers=Followed
-tatami.user.nbFollowers=Followers
+tatami.500=An error has occurred.
 tatami.authentification=Authentification
 tatami.authentificate=Authentificate
 tatami.remember.password.time=Automatic connection (30 days)
@@ -33,9 +28,19 @@ tatami.user.favoritetweets=Favorite Tweets
 tatami.user.otheruser.tweets=Other User Tweets
 tatami.tags=Tags
 tatami.tweets.stats=Statistics
-tatami.stats.tweets.piechart=Tweets of the day (pie chart)
-tatami.stats.tweets.punchchart=Tweets of the week (punch chart)
-tatami.user.yourare=You are !
+tatami.stats.tweets.piechart=Tweets of the day
+tatami.stats.tweets.punchchart=Tweets of the week
+
+tatami.user.email=E-mail
+tatami.user.firstName=First name
+tatami.user.lastName=Last name
+tatami.user.followed=Followed
+tatami.user.follow=Follow
+tatami.user.nbTweets=Tweets
+tatami.user.nbFollowedUsers=Followed
+tatami.user.nbFollowers=Followers
+tatami.user.undefined=User undefined.
+tatami.user.youare=You are !
 tatami.user.tweettohim=Tweet to him
 tatami.user.suggestions=Suggestions
 tatami.user.tweet=Tweet !
