--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,4 +1,3 @@
-tatami.user.undefined=Utilisateur inconnu.
 tatami.copyright=Copyright 2012
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Forker Tatami sur Github
@@ -9,22 +8,18 @@ tatami.profile=Profil
 tatami.home=Accueil
 tatami.about=A Propos
 tatami.logout=Déconnexion
-tatami.login=Connexion
+tatami.login=Identifiant
 tatami.password=Mot de Passe
-tatami.404=Page non trouvée
-tatami.user.followed=Suivi
-tatami.user.follow=Suivre
-tatami.user.nbTweets=Tweets
-tatami.user.nbFollowedUsers=Abonnements
-tatami.user.nbFollowers=Abonnés
+tatami.404=Page non trouvée.
+tatami.500=Une erreur s'est produite.
 tatami.authentification=Authentification
 tatami.authentificate=Se Connecter
 tatami.remember.password.time=Connexion automatique (30 jours)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.licence=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
-tatami.license=License
-tatami.presentation=Presentation
-tatami.presentation.text=Tatami is a twitter-like application, for internal use inside a company.
+tatami.license=Licence
+tatami.presentation=Présentation
+tatami.presentation.text=Tatami est un clone de Twitter, utilisable en interne dans votre entreprise.
 tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
 tatami.show.profile=Profil
 tatami.update.profile=Mettre à jour le Profil
@@ -33,9 +28,19 @@ tatami.user.favoritetweets=Tweets Favoris
 tatami.user.otheruser.tweets=Tweets des autres Utilisateurs
 tatami.tags=Tags
 tatami.tweets.stats=Statistiques
-tatami.stats.tweets.piechart=Tweets du jour (pie chart)
-tatami.stats.tweets.punchchart=Tweets de la semaine (punch chart)
-tatami.user.yourare=C'est vous !
+tatami.stats.tweets.piechart=Tweets du jour
+tatami.stats.tweets.punchchart=Tweets de la semaine
+
+tatami.user.email=E-mail
+tatami.user.firstName=Prénom
+tatami.user.lastName=Nom
+tatami.user.followed=Suivi
+tatami.user.follow=Suivre
+tatami.user.nbTweets=Tweets
+tatami.user.nbFollowedUsers=Abonnements
+tatami.user.nbFollowers=Abonnés
+tatami.user.undefined=Utilisateur inconnu.
+tatami.user.youare=C'est vous !
 tatami.user.tweettohim=Tweet lui
 tatami.user.suggestions=Suggestions
 tatami.user.tweet=Tweet !
