Updated error pages

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,7 +40,7 @@ tatami.user.nbTweets=Tweets
 tatami.user.nbFollowedUsers=Followed
 tatami.user.nbFollowers=Followers
 tatami.user.undefined=User undefined.
-tatami.user.youare=You are !
+tatami.user.yourself=It's you !
 tatami.user.tweettohim=Tweet to him
 tatami.user.suggestions=Suggestions
 tatami.user.tweet=Tweet !
