--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -40,7 +40,7 @@ tatami.user.nbTweets=Tweets
 tatami.user.nbFollowedUsers=Abonnements
 tatami.user.nbFollowers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
-tatami.user.youare=C'est vous !
+tatami.user.yourself=C'est vous !
 tatami.user.tweettohim=Tweet lui
 tatami.user.suggestions=Suggestions
 tatami.user.tweet=Tweet !
