ElasticSearch is in da house

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,6 +7,8 @@ tatami.title=Tatami
 tatami.profile=Profile
 tatami.home=Home
 tatami.about=About
+tatami.search.placeholder=Search
+tatami.search.button=Search
 tatami.logout=Logout
 tatami.login=Login
 tatami.password=Password
@@ -27,6 +29,7 @@ tatami.tweets=Tweets
 tatami.user.favoritetweets=Favorite Tweets
 tatami.user.otheruser.tweets=Other User Tweets
 tatami.tags=Tags
+tatami.search=Search
 tatami.tweets.stats=Statistics
 tatami.stats.tweets.piechart=Tweets of the day
 tatami.stats.tweets.punchchart=Tweets of the week
