--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -7,6 +7,8 @@ tatami.title=Tatami
 tatami.profile=Profil
 tatami.home=Accueil
 tatami.about=A Propos
+tatami.search.placeholder=Rechercher
+tatami.search.button=Rechercher
 tatami.logout=Déconnexion
 tatami.login=Identifiant
 tatami.password=Mot de Passe
@@ -27,6 +29,7 @@ tatami.tweets=Tweets
 tatami.user.favoritetweets=Tweets Favoris
 tatami.user.otheruser.tweets=Tweets des autres Utilisateurs
 tatami.tags=Tags
+tatami.search=Recherche
 tatami.tweets.stats=Statistiques
 tatami.stats.tweets.piechart=Tweets du jour
 tatami.stats.tweets.punchchart=Tweets de la semaine
