Updated profile page

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -43,6 +43,5 @@ tatami.user.nbFollowedUsers=Followed
 tatami.user.nbFollowers=Followers
 tatami.user.undefined=User undefined.
 tatami.user.yourself=It's you !
-tatami.user.tweettohim=Tweet to him
-tatami.user.suggestions=Suggestions
+tatami.user.tweettohim=Tweet to 
 tatami.user.tweet=Tweet !
