--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -43,6 +43,5 @@ tatami.user.nbFollowedUsers=Abonnements
 tatami.user.nbFollowers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
-tatami.user.tweettohim=Tweet lui
-tatami.user.suggestions=Suggestions
+tatami.user.tweettohim=Envoyez un Tweet à 
 tatami.user.tweet=Tweet !
