Many changes related to the new mobile UI

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -33,6 +33,15 @@ tatami.tweets.stats=Statistics
 tatami.stats.tweets.piechart=Tweets of the day
 tatami.stats.tweets.punchchart=Tweets of the week
 
+tatami.tweet=Tweet
+tatami.timeline=Timeline
+tatami.more=More
+tatami.update.profile.mobile=Update Profile
+tatami.favorites.mobile=Favorites
+tatami.userline.mobile=Userline
+tatami.tagline.mobile=Tagline
+tatami.user.suggestions.mobile=Users Suggestions
+
 tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
