--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -33,6 +33,15 @@ tatami.tweets.stats=Statistiques
 tatami.stats.tweets.piechart=Tweets du jour
 tatami.stats.tweets.punchchart=Tweets de la semaine
 
+tatami.tweet=Tweet
+tatami.timeline=Timeline
+tatami.more=Plus
+tatami.update.profile.mobile=Profil
+tatami.favorites.mobile=Favoris
+tatami.userline.mobile=Userline
+tatami.tagline.mobile=Tagline
+tatami.user.suggestions.mobile=Suggestions
+
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
