--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -18,7 +18,7 @@ tatami.authentification=Authentification
 tatami.authentificate=Se Connecter
 tatami.remember.password.time=Connexion automatique (30 jours)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
-tatami.licence=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
+tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Licence
 tatami.presentation=Présentation
 tatami.presentation.text=Tatami est un clone de Twitter, utilisable en interne dans votre entreprise.
