Text updates for the mobile version

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -33,7 +33,7 @@ tatami.tweets.stats=Statistics
 tatami.stats.tweets.piechart=Tweets of the day
 tatami.stats.tweets.punchchart=Tweets of the week
 
-tatami.tweet=Tweet
+tatami.new.tweet=Update
 tatami.timeline=Timeline
 tatami.more=More
 tatami.update.profile.mobile=Update Profile
