--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -33,7 +33,7 @@ tatami.tweets.stats=Statistiques
 tatami.stats.tweets.piechart=Tweets du jour
 tatami.stats.tweets.punchchart=Tweets de la semaine
 
-tatami.tweet=Tweet
+tatami.new.tweet=Nouveau
 tatami.timeline=Timeline
 tatami.more=Plus
 tatami.update.profile.mobile=Profil
