--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -53,4 +53,4 @@ tatami.user.nbFollowers=Followers
 tatami.user.undefined=User undefined.
 tatami.user.yourself=It's you !
 tatami.user.tweettohim=Tweet to 
-tatami.user.tweet=Tweet !
+tatami.user.tweet=Tweet
