--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -53,4 +53,4 @@ tatami.user.nbFollowers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
 tatami.user.tweettohim=Envoyez un Tweet à 
-tatami.user.tweet=Tweet !
+tatami.user.tweet=Tweet
