--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -26,7 +26,7 @@ tatami.presentation.moreinfo=More information on our Github page :
 tatami.show.profile=Profile
 tatami.update.profile=Update your Profile
 tatami.tweets=Tweets
-tatami.user.favoritetweets=Favorite Tweets
+tatami.user.favoritetweets=Favorites
 tatami.tags=Tags
 tatami.search=Search
 tatami.tweets.stats=Statistics
