--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -26,7 +26,7 @@ tatami.presentation.moreinfo=Plus d'informations sur notre page Github :
 tatami.show.profile=Profil
 tatami.update.profile=Mettre à jour le Profil
 tatami.tweets=Tweets
-tatami.user.favoritetweets=Tweets Favoris
+tatami.user.favoritetweets=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
 tatami.tweets.stats=Statistiques
