--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -45,11 +45,11 @@ tatami.user.suggestions.mobile=Suggestions
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
-tatami.user.followed=Suivi
 tatami.user.follow=Suivre
-tatami.user.nbTweets=Tweets
-tatami.user.nbFollowedUsers=Abonnements
-tatami.user.nbFollowers=Abonnés
+tatami.user.followed=Suivi
+tatami.badge.tweets=Tweets
+tatami.badge.followed=Suivis
+tatami.badge.followers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
 tatami.user.tweettohim=Envoyez un Tweet à 
