--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -42,6 +42,7 @@ tatami.userline.mobile=Userline
 tatami.tagline.mobile=Tagline
 tatami.user.suggestions.mobile=Suggestions
 
+tatami.user.picture=Pour mettre à jour votre photo, connectez-vous sur
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
