--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -42,6 +42,7 @@ tatami.userline.mobile=Userline
 tatami.tagline.mobile=Tagline
 tatami.user.suggestions.mobile=Users Suggestions
 
+tatami.user.picture=To update your picture, go to
 tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
