Refactored tweet -> status

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -25,15 +25,16 @@ tatami.presentation.text=Tatami est un clone de Twitter, utilisable en interne d
 tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
 tatami.show.profile=Profil
 tatami.update.profile=Mettre à jour le Profil
-tatami.tweets=Tweets
-tatami.user.favoritetweets=Favoris
+tatami.status=Status
+tatami.status.update=Mettre à jour votre status
+tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
-tatami.tweets.stats=Statistiques
-tatami.stats.tweets.piechart=Tweets du jour
-tatami.stats.tweets.punchchart=Tweets de la semaine
+tatami.status.stats=Statistiques
+tatami.stats.status.piechart=Status du jour
+tatami.stats.status.punchchart=Status de la semaine
 
-tatami.new.tweet=Nouveau
+tatami.new.status=Nouveau
 tatami.timeline=Timeline
 tatami.more=Plus
 tatami.update.profile.mobile=Profil
@@ -48,10 +49,10 @@ tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
 tatami.user.follow=Suivre
 tatami.user.followed=Suivi
-tatami.badge.tweets=Tweets
+tatami.badge.status=Status
 tatami.badge.followed=Suivis
 tatami.badge.followers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
-tatami.user.tweettohim=Envoyez un Tweet à 
-tatami.user.tweet=Tweet
+tatami.user.statustohim=Envoyez un message à
+tatami.user.status=Status
