--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -25,15 +25,16 @@ tatami.presentation.text=Tatami is a twitter-like application, for internal use 
 tatami.presentation.moreinfo=More information on our Github page : 
 tatami.show.profile=Profile
 tatami.update.profile=Update your Profile
-tatami.tweets=Tweets
-tatami.user.favoritetweets=Favorites
+tatami.status=Status
+tatami.status.update=Update your status
+tatami.user.favoritestatus=Favorites
 tatami.tags=Tags
 tatami.search=Search
-tatami.tweets.stats=Statistics
-tatami.stats.tweets.piechart=Tweets of the day
-tatami.stats.tweets.punchchart=Tweets of the week
+tatami.status.stats=Statistics
+tatami.stats.status.piechart=Status of the day
+tatami.stats.status.punchchart=Status of the week
 
-tatami.new.tweet=Update
+tatami.new.status=Update
 tatami.timeline=Timeline
 tatami.more=More
 tatami.update.profile.mobile=Update Profile
@@ -48,10 +49,10 @@ tatami.user.firstName=First name
 tatami.user.lastName=Last name
 tatami.user.follow=Follow
 tatami.user.followed=Followed
-tatami.badge.tweets=Tweets
+tatami.badge.status=Status
 tatami.badge.followed=Followed
 tatami.badge.followers=Followers
 tatami.user.undefined=User undefined.
 tatami.user.yourself=It's you !
-tatami.user.tweettohim=Tweet to 
-tatami.user.tweet=Tweet
+tatami.user.statustohim=Send a message to
+tatami.user.status=Status
