--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -54,5 +54,6 @@ tatami.badge.followed=Followed
 tatami.badge.followers=Followers
 tatami.user.undefined=User undefined.
 tatami.user.yourself=It's you !
-tatami.user.statustohim=Send a message to
+tatami.user.sendmessageto=Send a message to
+tatami.user.send=Send
 tatami.user.status=Status
