--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -54,5 +54,6 @@ tatami.badge.followed=Suivis
 tatami.badge.followers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
-tatami.user.statustohim=Envoyez un message à
+tatami.user.sendmessageto=Envoyez un message à
+tatami.user.send=Envoi
 tatami.user.status=Status
