Starting to work on the multi-enterprise version of Tatami

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -10,18 +10,24 @@ tatami.about=About
 tatami.search.placeholder=Search
 tatami.search.button=Search
 tatami.logout=Logout
-tatami.login=Login
+tatami.login=E-mail
 tatami.password=Password
 tatami.404=Page not found.
 tatami.500=An error has occurred.
-tatami.authentification=Authentication
+tatami.register.title=You don't have an account (yet)
+tatami.register.text.1=To create an account in Tatami, please register your e-mail address.
+tatami.register.text.2=A confirmation message will be sent to the e-mail address you provided.
+tatami.register.text.3=Depending on your e-mail address' domain name, you will join your company's private space. For example, users with an email@ippon.fr address will join Ippon's private space
+tatami.register.text.4=If you are the first employee of your company to join Tatami, your company's private space will be automatically created.
+tatami.register=Register
+tatami.authentification=You already have an account
 tatami.authentificate=Authenticate
 tatami.remember.password.time=Automatic connection (30 days)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=License
 tatami.presentation=Presentation
-tatami.presentation.text=Tatami is a twitter-like application, for internal use inside a company.
+tatami.presentation.text=Tatami is a private Twitter-like social network, that you can use inside your company.
 tatami.presentation.moreinfo=More information on our Github page : 
 tatami.show.profile=Profile
 tatami.update.profile=Update your Profile
