--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -10,18 +10,24 @@ tatami.about=A Propos
 tatami.search.placeholder=Rechercher
 tatami.search.button=Rechercher
 tatami.logout=Déconnexion
-tatami.login=Identifiant
+tatami.login=E-mail
 tatami.password=Mot de Passe
 tatami.404=Page non trouvée.
 tatami.500=Une erreur s'est produite.
-tatami.authentification=Authentification
+tatami.register.title=Vous n'avez pas (encore) de compte
+tatami.register.text.1=Pour créer votre compte Tatami, merci d'enregistrer votre adresse e-mail.
+tatami.register.text.2=Un message de confirmation sera envoyé à l'adresse e-mail que vous avez fournie.
+tatami.register.text.3=En fonction du nom de domaine de votre adresse e-mail, vous rejoindrez alors l'espace privé de votre entreprise. Par exemple, les utilisateurs avec une adresse de type email@ippon.fr rejoindront l'espace privé d'Ippon Technologies.
+tatami.register.text.4=Si vous êtes le premier employé de votre société à rejoindre Tatami, un espace privé pour votre société sera automatiquement créé.
+tatami.register=Enregistrement
+tatami.authentification=Vous avez déjà un compte
 tatami.authentificate=Se Connecter
 tatami.remember.password.time=Connexion automatique (30 jours)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Licence
 tatami.presentation=Présentation
-tatami.presentation.text=Tatami est un clone de Twitter, utilisable en interne dans votre entreprise.
+tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisable en interne dans votre entreprise.
 tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
 tatami.show.profile=Profil
 tatami.update.profile=Mettre à jour le Profil
