--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -27,7 +27,7 @@ tatami.cg=Unless required by applicable law or agreed to in writing, software di
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=License
 tatami.presentation=Presentation
-tatami.presentation.text=Tatami is a private Twitter-like social network, that you can use inside your company.
+tatami.presentation.text=Tatami is an enterprise micro-blogging platform.
 tatami.presentation.moreinfo=More information on our Github page : 
 tatami.show.profile=Profile
 tatami.update.profile=Update your Profile
