Basic user management is started.

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -29,8 +29,6 @@ tatami.license=License
 tatami.presentation=Presentation
 tatami.presentation.text=Tatami is an enterprise micro-blogging platform.
 tatami.presentation.moreinfo=More information on our Github page : 
-tatami.show.profile=Profile
-tatami.update.profile=Update your Profile
 tatami.status=Status
 tatami.status.update=Update your status
 tatami.user.favoritestatus=Favorites
@@ -49,7 +47,8 @@ tatami.userline.mobile=Userline
 tatami.tagline.mobile=Tagline
 tatami.user.suggestions.mobile=Users Suggestions
 
-tatami.user.picture=To update your picture, go to
+tatami.user.picture=Picture
+tatami.user.picture.legend=To update your picture, go to
 tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
@@ -63,3 +62,21 @@ tatami.user.yourself=It's you !
 tatami.user.sendmessageto=Send a message to
 tatami.user.send=Send
 tatami.user.status=Status
+
+tatami.menu.profile=Profile
+tatami.menu.password=Password
+tatami.menu.enterprise=Enterprise
+
+tatami.form.save=Save
+tatami.form.cancel=Cancel
+
+tatami.account.update.title=User profile
+tatami.account.update.legend=Update your profile
+tatami.user.update.success=Your profile has been successfully updated.
+tatami.user.update.error=An error has occurred!
+tatami.user.suppress=Delete the current user account
+tatami.user.suppress.confirmation=You are going to delete your account. Are you sure?
+tatami.user.password.legend=Update your password
+tatami.user.old.password=Old password
+tatami.user.new.password=New password
+tatami.user.new.password.confirmation=New password confirmation
