--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -29,8 +29,6 @@ tatami.license=Licence
 tatami.presentation=Présentation
 tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisable en interne dans votre entreprise.
 tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
-tatami.show.profile=Profil
-tatami.update.profile=Mettre à jour le Profil
 tatami.status=Status
 tatami.status.update=Mettre à jour votre status
 tatami.user.favoritestatus=Favoris
@@ -49,7 +47,8 @@ tatami.userline.mobile=Userline
 tatami.tagline.mobile=Tagline
 tatami.user.suggestions.mobile=Suggestions
 
-tatami.user.picture=Pour mettre à jour votre photo, connectez-vous sur
+tatami.user.picture=Photo
+tatami.user.picture.legend=Pour mettre à jour votre photo, connectez-vous sur
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
@@ -63,3 +62,21 @@ tatami.user.yourself=C'est vous !
 tatami.user.sendmessageto=Envoyez un message à
 tatami.user.send=Envoi
 tatami.user.status=Status
+
+tatami.menu.profile=Profil
+tatami.menu.password=Mot de passe
+tatami.menu.enterprise=Entreprise
+
+tatami.form.save=Sauvegarder
+tatami.form.cancel=Annuler
+
+tatami.account.update.title=Profil utilisateur
+tatami.account.update.legend=Mise à jour du profil
+tatami.user.update.success=Votre profil a été mis à jour.
+tatami.user.update.error=Une erreur s'est produite !
+tatami.user.suppress=Destruction du compte utilisateur
+tatami.user.suppress.confirmation=Etes-vous sûr de vouloir détruire votre compte ?
+tatami.user.password.legend=Mise à jour de votre mot de passe
+tatami.user.old.password=Ancien mot de passe
+tatami.user.new.password=Nouveau mot de passe
+tatami.user.new.password.confirmation=Confirmation du mot de passe
