Profile management & password management OK

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -77,6 +77,9 @@ tatami.user.update.error=An error has occurred!
 tatami.user.suppress=Delete the current user account
 tatami.user.suppress.confirmation=You are going to delete your account. Are you sure?
 tatami.user.password.legend=Update your password
+tatami.user.password.success=Your password has been successfully updated.
 tatami.user.old.password=Old password
+tatami.user.old.password.error=The old password is incorrect.
 tatami.user.new.password=New password
 tatami.user.new.password.confirmation=New password confirmation
+tatami.user.new.password.confirmation.error=The new password confirmation is incorrect
