--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -77,6 +77,9 @@ tatami.user.update.error=Une erreur s'est produite !
 tatami.user.suppress=Destruction du compte utilisateur
 tatami.user.suppress.confirmation=Etes-vous sûr de vouloir détruire votre compte ?
 tatami.user.password.legend=Mise à jour de votre mot de passe
+tatami.user.password.success=Votre mot de passe a été mis à jour.
 tatami.user.old.password=Ancien mot de passe
+tatami.user.old.password.error=Ancien mot de passe incorrect
 tatami.user.new.password=Nouveau mot de passe
+tatami.user.new.password.confirmation.error=La confirmation du nouveau mot de passe est incorrecte
 tatami.user.new.password.confirmation=Confirmation du mot de passe
