Basic enterprise user management.

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -11,6 +11,7 @@ tatami.search.placeholder=Search
 tatami.search.button=Search
 tatami.logout=Logout
 tatami.login=E-mail
+tatami.username=User name
 tatami.password=Password
 tatami.404=Page not found.
 tatami.500=An error has occurred.
@@ -77,6 +78,7 @@ tatami.user.update.error=An error has occurred!
 tatami.user.suppress=Delete the current user account
 tatami.user.suppress.confirmation=You are going to delete your account. Are you sure?
 tatami.user.password.legend=Update your password
+tatami.user.password.ldap=Your password is managed by an LDAP server, you cannot update it with Tatami.
 tatami.user.password.success=Your password has been successfully updated.
 tatami.user.old.password=Old password
 tatami.user.old.password.error=The old password is incorrect.
