--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -11,6 +11,7 @@ tatami.search.placeholder=Rechercher
 tatami.search.button=Rechercher
 tatami.logout=Déconnexion
 tatami.login=E-mail
+tatami.username=Nom d'utilisateur
 tatami.password=Mot de Passe
 tatami.404=Page non trouvée.
 tatami.500=Une erreur s'est produite.
@@ -77,6 +78,7 @@ tatami.user.update.error=Une erreur s'est produite !
 tatami.user.suppress=Destruction du compte utilisateur
 tatami.user.suppress.confirmation=Etes-vous sûr de vouloir détruire votre compte ?
 tatami.user.password.legend=Mise à jour de votre mot de passe
+tatami.user.password.ldap=Votre mot de passe est géré par LDAP, vous ne pouvez pas le modifier via Tatami.
 tatami.user.password.success=Votre mot de passe a été mis à jour.
 tatami.user.old.password=Ancien mot de passe
 tatami.user.old.password.error=Ancien mot de passe incorrect
