Added pagination to the users list

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -68,6 +68,8 @@ tatami.menu.profile=Profile
 tatami.menu.password=Password
 tatami.menu.enterprise=Enterprise
 
+tatami.form.previous=Previous
+tatami.form.next=Next
 tatami.form.save=Save
 tatami.form.cancel=Cancel
 
