--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -68,6 +68,8 @@ tatami.menu.profile=Profil
 tatami.menu.password=Mot de passe
 tatami.menu.enterprise=Entreprise
 
+tatami.form.previous=Précédent
+tatami.form.next=Suivant
 tatami.form.save=Sauvegarder
 tatami.form.cancel=Annuler
 
