Coded the registration/validation process

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -15,12 +15,17 @@ tatami.username=User name
 tatami.password=Password
 tatami.404=Page not found.
 tatami.500=An error has occurred.
+
 tatami.register.title=You don't have an account (yet)
 tatami.register.text.1=To create an account in Tatami, please register your e-mail address.
 tatami.register.text.2=A confirmation message will be sent to the e-mail address you provided.
 tatami.register.text.3=Depending on your e-mail address' domain name, you will join your company's private space. For example, users with an email@ippon.fr address will join Ippon's private space
 tatami.register.text.4=If you are the first employee of your company to join Tatami, your company's private space will be automatically created.
 tatami.register=Register
+tatami.register.validation.title=E-mail validation
+tatami.register.validation.error=You e-mail could not be validated. Please use the registration form to register your e-mail.
+tatami.register.validation.ok=Your e-mail has been validated. Your password will be e-mailed to you.
+
 tatami.authentification=You already have an account
 tatami.authentificate=Authenticate
 tatami.remember.password.time=Automatic connection (30 days)
