--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -21,6 +21,11 @@ tatami.register.text.2=Un message de confirmation sera envoyé à l'adresse e-mail
 tatami.register.text.3=En fonction du nom de domaine de votre adresse e-mail, vous rejoindrez alors l'espace privé de votre entreprise. Par exemple, les utilisateurs avec une adresse de type email@ippon.fr rejoindront l'espace privé d'Ippon Technologies.
 tatami.register.text.4=Si vous êtes le premier employé de votre société à rejoindre Tatami, un espace privé pour votre société sera automatiquement créé.
 tatami.register=Enregistrement
+
+tatami.register.validation.title=Validation de votre adresse e-mail
+tatami.register.validation.error=Votre adresse e-mail n'a pas pu être validée. Merci d'utiliser à nouveau notre formulaire d'enregistrement.
+tatami.register.validation.ok=Votre adresse e-mail a été validée. Vous allez recevoir votre mot de passe par e-mail.
+
 tatami.authentification=Vous avez déjà un compte
 tatami.authentificate=Se Connecter
 tatami.remember.password.time=Connexion automatique (30 jours)
