Lost password & error management

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -15,19 +15,27 @@ tatami.username=Nom d'utilisateur
 tatami.password=Mot de Passe
 tatami.404=Page non trouvée.
 tatami.500=Une erreur s'est produite.
+
 tatami.register.title=Vous n'avez pas (encore) de compte
 tatami.register.text.1=Pour créer votre compte Tatami, merci d'enregistrer votre adresse e-mail.
 tatami.register.text.2=Un message de confirmation sera envoyé à l'adresse e-mail que vous avez fournie.
 tatami.register.text.3=En fonction du nom de domaine de votre adresse e-mail, vous rejoindrez alors l'espace privé de votre entreprise. Par exemple, les utilisateurs avec une adresse de type email@ippon.fr rejoindront l'espace privé d'Ippon Technologies.
 tatami.register.text.4=Si vous êtes le premier employé de votre société à rejoindre Tatami, un espace privé pour votre société sera automatiquement créé.
 tatami.register=Enregistrement
-
+tatami.register.msg=Merci ! Un e-mail d'inscription vient de vous être envoyé.
+tatami.register.msg.error=Cette adresse e-mail est déjà utilisée par un utilisateur de Tatami.
 tatami.register.validation.title=Validation de votre adresse e-mail
 tatami.register.validation.error=Votre adresse e-mail n'a pas pu être validée. Merci d'utiliser à nouveau notre formulaire d'enregistrement.
 tatami.register.validation.ok=Votre adresse e-mail a été validée. Vous allez recevoir votre mot de passe par e-mail.
 
+tatami.lost.password.title=Vous avez oublié votre mot de passe ?
+tatami.lost.password.button=Demander un nouveau mot de passe
+tatami.lost.password.msg=Un e-mail vous a été envoyé, vous expliquant comment réinitialiser votre mot de passe.
+tatami.lost.password.msg.error=Cette adresse e-mail n'est pas enregistrée dans Tatami.
+
 tatami.authentification=Vous avez déjà un compte
 tatami.authentificate=Se Connecter
+tatami.authentification.error=Votre authentification a échoué ! Votre mot de passe est-il correct ?
 tatami.remember.password.time=Connexion automatique (30 jours)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
