--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -22,12 +22,20 @@ tatami.register.text.2=A confirmation message will be sent to the e-mail address
 tatami.register.text.3=Depending on your e-mail address' domain name, you will join your company's private space. For example, users with an email@ippon.fr address will join Ippon's private space
 tatami.register.text.4=If you are the first employee of your company to join Tatami, your company's private space will be automatically created.
 tatami.register=Register
+tatami.register.msg=Thank you! A registration e-mail has been sent to you.
 tatami.register.validation.title=E-mail validation
+tatami.register.msg.error=This e-mail address is already in used by a Tatami user.
 tatami.register.validation.error=You e-mail could not be validated. Please use the registration form to register your e-mail.
 tatami.register.validation.ok=Your e-mail has been validated. Your password will be e-mailed to you.
 
+tatami.lost.password.title=You have forgotten your password?
+tatami.lost.password.button=Ask for a new password
+tatami.lost.password.msg=An e-mail has been sent to you, with instructions to generate a new password.
+tatami.lost.password.msg.error=This e-mail address is not registered in Tatami.
+
 tatami.authentification=You already have an account
 tatami.authentificate=Authenticate
+tatami.authentification.error=Your authentication has failed! Are you sure you used the correct password?
 tatami.remember.password.time=Automatic connection (30 days)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
