--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -43,14 +43,14 @@ tatami.license=Licence
 tatami.presentation=Présentation
 tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisable en interne dans votre entreprise.
 tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
-tatami.status=Status
-tatami.status.update=Mettre à jour votre status
+tatami.status=Statut
+tatami.status.update=Mettre à jour votre statut
 tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
 tatami.status.stats=Statistiques
-tatami.stats.status.piechart=Status du jour
-tatami.stats.status.punchchart=Status de la semaine
+tatami.stats.status.piechart=Statuts du jour
+tatami.stats.status.punchchart=Statuts de la semaine
 
 tatami.new.status=Nouveau
 tatami.timeline=Timeline
@@ -68,14 +68,14 @@ tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
 tatami.user.follow=Suivre
 tatami.user.followed=Suivi
-tatami.badge.status=Status
+tatami.badge.status=Statut
 tatami.badge.followed=Suivis
 tatami.badge.followers=Abonnés
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
 tatami.user.sendmessageto=Envoyez un message à
 tatami.user.send=Envoi
-tatami.user.status=Status
+tatami.user.status=Statut
 
 tatami.menu.profile=Profil
 tatami.menu.password=Mot de passe
