Refonte de l'interface web.(Responsive design)

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -100,3 +100,5 @@ tatami.user.old.password.error=The old password is incorrect.
 tatami.user.new.password=New password
 tatami.user.new.password.confirmation=New password confirmation
 tatami.user.new.password.confirmation.error=The new password confirmation is incorrect
+
+tatami.user.profile.show=Show profile of
