--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -100,3 +100,5 @@ tatami.user.old.password.error=Ancien mot de passe incorrect
 tatami.user.new.password=Nouveau mot de passe
 tatami.user.new.password.confirmation.error=La confirmation du nouveau mot de passe est incorrecte
 tatami.user.new.password.confirmation=Confirmation du mot de passe
+
+tatami.user.profile.show=Profil de
