--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -102,3 +102,9 @@ tatami.user.new.password.confirmation=New password confirmation
 tatami.user.new.password.confirmation.error=The new password confirmation is incorrect
 
 tatami.user.profile.show=Show profile of
+tatami.user.status.show=Show status
+tatami.user.status.favorite=Favorite
+tatami.user.status.delete=Delete
+
+tatami.timeline.refresh=Refresh
+tatami.timeline.next=More
