--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -102,3 +102,9 @@ tatami.user.new.password.confirmation.error=La confirmation du nouveau mot de pa
 tatami.user.new.password.confirmation=Confirmation du mot de passe
 
 tatami.user.profile.show=Profil de
+tatami.user.status.show=Voir le status
+tatami.user.status.favorite=Mettre en favoris
+tatami.user.status.delete=Supprimer
+
+tatami.timeline.refresh=Rafraîchir
+tatami.timeline.next=Plus
