Fixed security tests

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -27,6 +27,7 @@ tatami.register.validation.title=E-mail validation
 tatami.register.msg.error=This e-mail address is already in used by a Tatami user.
 tatami.register.validation.error=You e-mail could not be validated. Please use the registration form to register your e-mail.
 tatami.register.validation.ok=Your e-mail has been validated. Your password will be e-mailed to you.
+tatami.register.home=Go to the home page
 
 tatami.lost.password.title=You have forgotten your password?
 tatami.lost.password.button=Ask for a new password
