--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -27,6 +27,7 @@ tatami.register.msg.error=Cette adresse e-mail est déjà utilisée par un utilisat
 tatami.register.validation.title=Validation de votre adresse e-mail
 tatami.register.validation.error=Votre adresse e-mail n'a pas pu être validée. Merci d'utiliser à nouveau notre formulaire d'enregistrement.
 tatami.register.validation.ok=Votre adresse e-mail a été validée. Vous allez recevoir votre mot de passe par e-mail.
+tatami.register.home=Aller à la page d'accueil
 
 tatami.lost.password.title=Vous avez oublié votre mot de passe ?
 tatami.lost.password.button=Demander un nouveau mot de passe
