--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -108,3 +108,5 @@ tatami.user.status.delete=Delete
 
 tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
+
+tatami.user.status.confirm.delete=Delete status ?
