--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -108,3 +108,5 @@ tatami.user.status.delete=Supprimer
 
 tatami.timeline.refresh=Rafraîchir
 tatami.timeline.next=Plus
+
+tatami.user.status.confirm.delete=Supprimer status ?
