--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -37,9 +37,10 @@ tatami.lost.password.msg.error=This e-mail address is not registered in Tatami.
 tatami.authentification=You already have an account
 tatami.authentificate=Authenticate
 tatami.authentification.error=Your authentication has failed! Are you sure you used the correct password?
-tatami.authentication.google.title=Google authentication
-tatami.authentication.google.desc.1=Whether or not you already have a Tatami account, you can sign in with your Google Account.
-tatami.authentication.google.desc.2=Your email will be asked to Google and its domain name will be used to make you join the corresponding private space
+tatami.authentication.google.title=Google Apps authentication
+tatami.authentication.google.desc.1=This feature is for enterprise Google Apps users, who have their enterprise domain name managed by Google Apps. For more information on Google Apps, follow this link :
+tatami.authentication.google.desc.2=Whether or not you already have a Tatami account, you can sign in with your Google Apps account.
+tatami.authentication.google.desc.3=Your email will be asked to Google and your domain name will be used to make you join the corresponding private space.
 tatami.authentication.google.submit=Authenticate with Google 
 tatami.remember.password.time=Automatic connection (30 days)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
