--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -37,9 +37,10 @@ tatami.lost.password.msg.error=Cette adresse e-mail n'est pas enregistrée dans T
 tatami.authentification=Vous avez déjà un compte
 tatami.authentificate=Se Connecter
 tatami.authentification.error=Votre authentification a échoué ! Votre mot de passe est-il correct ?
-tatami.authentication.google.title=Authentification Google
-tatami.authentication.google.desc.1=Que vous ayez déjà un compte Tatami ou non, vous pouvez-vous connecter avec votre compte Google.
-tatami.authentication.google.desc.2=Votre email sera demandé à Google et son nom de domaine sera utilisé pour vous faire rejoindre l'espace privé correspondant
+tatami.authentication.google.title=Authentification Google Apps
+tatami.authentication.google.desc.1=Cette fonctionnalité concerne les utilisateurs professionnels de Google Apps, et qui ont le nom de domaine de leur société associé à leur compte Google Apps. Pour plus d'informations sur Google Apps, suivez ce lien :
+tatami.authentication.google.desc.2=Que vous ayez déjà un compte Tatami ou non, vous pouvez vous connecter avec votre compte Google Apps.
+tatami.authentication.google.desc.3=Votre email sera demandé à Google et votre nom de domaine sera utilisé pour vous faire rejoindre l'espace privé correspondant.
 tatami.authentication.google.submit=Je me connecte avec Google
 tatami.remember.password.time=Connexion automatique (30 jours)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
