--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -6,7 +6,10 @@ tatami.ippon.twitter.follow=Follow @ippontech on Twitter
 tatami.title=Tatami
 tatami.profile=Profile
 tatami.home=Home
-tatami.about=About
+tatami.menu.about=About
+tatami.menu.presentation=Presentation
+tatami.menu.tos=Terms of service
+tatami.menu.license=Source code license
 tatami.search.placeholder=Search
 tatami.search.button=Search
 tatami.logout=Logout
@@ -41,11 +44,12 @@ tatami.authentication.google.title=Google Apps authentication
 tatami.authentication.google.desc.1=This feature is for enterprise Google Apps users, who have their enterprise domain name managed by Google Apps. For more information on Google Apps, follow this link :
 tatami.authentication.google.desc.2=Whether or not you already have a Tatami account, you can sign in with your Google Apps account.
 tatami.authentication.google.desc.3=Your email will be asked to Google and your domain name will be used to make you join the corresponding private space.
-tatami.authentication.google.submit=Authenticate with Google 
+tatami.authentication.google.submit=Authentication with Google Apps
+tatami.authentication.cgv=Terms of Service 
 tatami.remember.password.time=Automatic connection (30 days)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
-tatami.license=License
+tatami.license=Source Code License
 tatami.presentation=Presentation
 tatami.presentation.text=Tatami is an enterprise micro-blogging platform.
 tatami.presentation.moreinfo=More information on our Github page : 
@@ -83,6 +87,8 @@ tatami.user.sendmessageto=Send a message to
 tatami.user.send=Send
 tatami.user.status=Status
 
+tatami.menu.search=Search...
+tatami.menu.account=Account
 tatami.menu.profile=Profile
 tatami.menu.password=Password
 tatami.menu.enterprise=Enterprise
