--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -6,7 +6,10 @@ tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
 tatami.title=Tatami
 tatami.profile=Profil
 tatami.home=Accueil
-tatami.about=A Propos
+tatami.menu.about=A Propos
+tatami.menu.presentation=Présentation
+tatami.menu.tos=Conditions générales de vente
+tatami.menu.license=Licence du code source
 tatami.search.placeholder=Rechercher
 tatami.search.button=Rechercher
 tatami.logout=Déconnexion
@@ -41,11 +44,12 @@ tatami.authentication.google.title=Authentification Google Apps
 tatami.authentication.google.desc.1=Cette fonctionnalité concerne les utilisateurs professionnels de Google Apps, et qui ont le nom de domaine de leur société associé à leur compte Google Apps. Pour plus d'informations sur Google Apps, suivez ce lien :
 tatami.authentication.google.desc.2=Que vous ayez déjà un compte Tatami ou non, vous pouvez vous connecter avec votre compte Google Apps.
 tatami.authentication.google.desc.3=Votre email sera demandé à Google et votre nom de domaine sera utilisé pour vous faire rejoindre l'espace privé correspondant.
-tatami.authentication.google.submit=Je me connecte avec Google
+tatami.authentication.google.submit=Connection avec Google Apps
+tatami.authentication.cgv=Conditions générales de vente
 tatami.remember.password.time=Connexion automatique (30 jours)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
-tatami.license=Licence
+tatami.license=Licence du code source
 tatami.presentation=Présentation
 tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisable en interne dans votre entreprise.
 tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
@@ -83,6 +87,8 @@ tatami.user.sendmessageto=Envoyez un message à
 tatami.user.send=Envoi
 tatami.user.status=Statut
 
+tatami.menu.search=Recherche...
+tatami.menu.account=Compte
 tatami.menu.profile=Profil
 tatami.menu.password=Mot de passe
 tatami.menu.enterprise=Entreprise
