i18n for profiles & home pages

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -55,12 +55,18 @@ tatami.presentation.text=Tatami is an enterprise micro-blogging platform.
 tatami.presentation.moreinfo=More information on our Github page : 
 tatami.status=Status
 tatami.status.update=Update your status
+tatami.status.update.to=Send a status update
 tatami.user.favoritestatus=Favorites
 tatami.tags=Tags
 tatami.search=Search
 tatami.status.stats=Statistics
 tatami.stats.status.piechart=Status of the day
 tatami.stats.status.punchchart=Status of the week
+tatami.follow.title=Follow another user
+tatami.follow.username=Type the user name to follow
+tatami.follow.action=Follow
+tatami.follow.suggestions=Who to follow?
+tatami.follow.nobody=No new user to follow today.
 
 tatami.new.status=Update
 tatami.timeline=Timeline
