--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -55,12 +55,18 @@ tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisab
 tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
 tatami.status=Statut
 tatami.status.update=Mettre à jour votre statut
+tatami.status.update.to=Envoyer une mise à jour du statut
 tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
 tatami.status.stats=Statistiques
 tatami.stats.status.piechart=Statuts du jour
 tatami.stats.status.punchchart=Statuts de la semaine
+tatami.follow.title=Suivre un autre utilisateur
+tatami.follow.username=Tapez l'identifiant de l'utilisateur à suivre
+tatami.follow.action=Suivre
+tatami.follow.suggestions=Qui suivre ?
+tatami.follow.nobody=Personne à suivre aujourd'hui.
 
 tatami.new.status=Nouveau
 tatami.timeline=Timeline
